--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -67,186 +67,24 @@ instacart %>%
   summarize(n = n()) %>% 
   group_by(aisle) %>% 
   filter(min_rank(desc(n)) <= 3) %>%
-  arrange(aisle, desc(n)) %>% 
-  ungroup() %>%
-  select(-aisle) %>% 
-  pivot_wider(names_from = product_name,
-              values_from = n) %>% 
-  knitr::kable(caption = "The number of times each item is ordered against the three most popular items in each aisle.") %>% 
-  add_header_above(c("baking ingredients" = 3,"dog food care" = 3, "packaged vegetables fruits" = 3))
+  arrange(desc(n)) %>% 
+  knitr::kable(caption = "The number of times each item is ordered against the three most popular items in each aisle.")
 ```
 
-<table>
-
-<caption>
+| product\_name                                 | aisle                      |    n |
+| :-------------------------------------------- | :------------------------- | ---: |
+| Organic Baby Spinach                          | packaged vegetables fruits | 9784 |
+| Organic Raspberries                           | packaged vegetables fruits | 5546 |
+| Organic Blueberries                           | packaged vegetables fruits | 4966 |
+| Light Brown Sugar                             | baking ingredients         |  499 |
+| Pure Baking Soda                              | baking ingredients         |  387 |
+| Cane Sugar                                    | baking ingredients         |  336 |
+| Snack Sticks Chicken & Rice Recipe Dog Treats | dog food care              |   30 |
+| Organix Chicken & Brown Rice Recipe           | dog food care              |   28 |
+| Small Dog Biscuits                            | dog food care              |   26 |
 
 The number of times each item is ordered against the three most popular
-items in each
-aisle.
-
-</caption>
-
-<thead>
-
-<tr>
-
-<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
-
-<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
-
-baking
-ingredients
-
-</div>
-
-</th>
-
-<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
-
-<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
-
-dog food
-care
-
-</div>
-
-</th>
-
-<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
-
-<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
-
-packaged vegetables fruits
-
-</div>
-
-</th>
-
-</tr>
-
-<tr>
-
-<th style="text-align:right;">
-
-Light Brown Sugar
-
-</th>
-
-<th style="text-align:right;">
-
-Pure Baking Soda
-
-</th>
-
-<th style="text-align:right;">
-
-Cane Sugar
-
-</th>
-
-<th style="text-align:right;">
-
-Snack Sticks Chicken & Rice Recipe Dog Treats
-
-</th>
-
-<th style="text-align:right;">
-
-Organix Chicken & Brown Rice Recipe
-
-</th>
-
-<th style="text-align:right;">
-
-Small Dog Biscuits
-
-</th>
-
-<th style="text-align:right;">
-
-Organic Baby Spinach
-
-</th>
-
-<th style="text-align:right;">
-
-Organic Raspberries
-
-</th>
-
-<th style="text-align:right;">
-
-Organic Blueberries
-
-</th>
-
-</tr>
-
-</thead>
-
-<tbody>
-
-<tr>
-
-<td style="text-align:right;">
-
-499
-
-</td>
-
-<td style="text-align:right;">
-
-387
-
-</td>
-
-<td style="text-align:right;">
-
-336
-
-</td>
-
-<td style="text-align:right;">
-
-30
-
-</td>
-
-<td style="text-align:right;">
-
-28
-
-</td>
-
-<td style="text-align:right;">
-
-26
-
-</td>
-
-<td style="text-align:right;">
-
-9784
-
-</td>
-
-<td style="text-align:right;">
-
-5546
-
-</td>
-
-<td style="text-align:right;">
-
-4966
-
-</td>
-
-</tr>
-
-</tbody>
-
-</table>
+items in each aisle.
 
   - `packaged vegetables fruits` is the most frequently ordered aisles,
     and `dog food care` is the least frequently ordered one.
@@ -271,180 +109,13 @@ instacart %>%
   knitr::kable(caption = "The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered") 
 ```
 
-<table>
-
-<caption>
+| product\_name    | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+| :--------------- | :----- | :----- | :------ | :-------- | :------- | :----- | :------- |
+| Coffee Ice Cream | 14:00  | 14:00  | 15:00   | 15:00     | 15:00    | 12:00  | 14:00    |
+| Pink Lady Apples | 13:00  | 11:00  | 12:00   | 14:00     | 12:00    | 13:00  | 12:00    |
 
 The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream
 are ordered
-
-</caption>
-
-<thead>
-
-<tr>
-
-<th style="text-align:left;">
-
-product\_name
-
-</th>
-
-<th style="text-align:left;">
-
-Sunday
-
-</th>
-
-<th style="text-align:left;">
-
-Monday
-
-</th>
-
-<th style="text-align:left;">
-
-Tuesday
-
-</th>
-
-<th style="text-align:left;">
-
-Wednesday
-
-</th>
-
-<th style="text-align:left;">
-
-Thursday
-
-</th>
-
-<th style="text-align:left;">
-
-Friday
-
-</th>
-
-<th style="text-align:left;">
-
-Saturday
-
-</th>
-
-</tr>
-
-</thead>
-
-<tbody>
-
-<tr>
-
-<td style="text-align:left;">
-
-Coffee Ice Cream
-
-</td>
-
-<td style="text-align:left;">
-
-14:00
-
-</td>
-
-<td style="text-align:left;">
-
-14:00
-
-</td>
-
-<td style="text-align:left;">
-
-15:00
-
-</td>
-
-<td style="text-align:left;">
-
-15:00
-
-</td>
-
-<td style="text-align:left;">
-
-15:00
-
-</td>
-
-<td style="text-align:left;">
-
-12:00
-
-</td>
-
-<td style="text-align:left;">
-
-14:00
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-Pink Lady Apples
-
-</td>
-
-<td style="text-align:left;">
-
-13:00
-
-</td>
-
-<td style="text-align:left;">
-
-11:00
-
-</td>
-
-<td style="text-align:left;">
-
-12:00
-
-</td>
-
-<td style="text-align:left;">
-
-14:00
-
-</td>
-
-<td style="text-align:left;">
-
-12:00
-
-</td>
-
-<td style="text-align:left;">
-
-13:00
-
-</td>
-
-<td style="text-align:left;">
-
-12:00
-
-</td>
-
-</tr>
-
-</tbody>
-
-</table>
 
   - Most of `Coffee Ice Cream` is ordered between two o’clock and three
     o’clock in the afternoon during the week. `Pink Lady Apples` is
@@ -564,18 +235,18 @@ activity = read_csv("./data/accel_data.csv") %>%
                values_to = "minute_activity") %>% 
   mutate(minute = as.numeric(minute),
          week = as.factor(week),
-         hour = minute %/% 60,
          weekday = factor(day %in% c("Sunday", "Saturday"), 
                           levels = c(TRUE, FALSE), 
                           labels = c("weekend", "weekday")),
          day = forcats::fct_relevel(day, c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday")))   
 ```
 
-  - There are 50400 observations and 7 variables in `acticity` dataset.
-    The variables are `week, day_id, day, minute, minute_activity, hour,
-    weekday`. For each observation, the dataset shows the activity
-    counts for the exact minute of a 24-hour day starting at midnight on
-    exact day and exact week.
+  - There are 50400 observations and 6 variables in `acticity` dataset.
+    The variables are `week, day_id, day, minute, minute_activity,
+    weekday`. `week`, `day` and `weekday` are factor variables, the
+    others are numeric variables. For each observation, the dataset
+    shows the activity counts for the exact minute of a 24-hour day
+    starting at midnight on exact day and exact week.
 
 <!-- end list -->
 
@@ -589,335 +260,15 @@ activity %>%
                caption ="The total activity over the day for five weeks") 
 ```
 
-<table>
-
-<caption>
+| week | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+| :--- | -----: | -----: | ------: | --------: | -------: | -----: | -------: |
+| 1    | 631105 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 |
+| 2    | 422018 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 |
+| 3    | 467052 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 |
+| 4    | 260617 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 |
+| 5    | 138421 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 |
 
 The total activity over the day for five weeks
-
-</caption>
-
-<thead>
-
-<tr>
-
-<th style="text-align:left;">
-
-week
-
-</th>
-
-<th style="text-align:right;">
-
-Sunday
-
-</th>
-
-<th style="text-align:right;">
-
-Monday
-
-</th>
-
-<th style="text-align:right;">
-
-Tuesday
-
-</th>
-
-<th style="text-align:right;">
-
-Wednesday
-
-</th>
-
-<th style="text-align:right;">
-
-Thursday
-
-</th>
-
-<th style="text-align:right;">
-
-Friday
-
-</th>
-
-<th style="text-align:right;">
-
-Saturday
-
-</th>
-
-</tr>
-
-</thead>
-
-<tbody>
-
-<tr>
-
-<td style="text-align:left;">
-
-1
-
-</td>
-
-<td style="text-align:right;">
-
-631105
-
-</td>
-
-<td style="text-align:right;">
-
-78828
-
-</td>
-
-<td style="text-align:right;">
-
-307094
-
-</td>
-
-<td style="text-align:right;">
-
-340115
-
-</td>
-
-<td style="text-align:right;">
-
-355924
-
-</td>
-
-<td style="text-align:right;">
-
-480543
-
-</td>
-
-<td style="text-align:right;">
-
-376254
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-2
-
-</td>
-
-<td style="text-align:right;">
-
-422018
-
-</td>
-
-<td style="text-align:right;">
-
-295431
-
-</td>
-
-<td style="text-align:right;">
-
-423245
-
-</td>
-
-<td style="text-align:right;">
-
-440962
-
-</td>
-
-<td style="text-align:right;">
-
-474048
-
-</td>
-
-<td style="text-align:right;">
-
-568839
-
-</td>
-
-<td style="text-align:right;">
-
-607175
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-3
-
-</td>
-
-<td style="text-align:right;">
-
-467052
-
-</td>
-
-<td style="text-align:right;">
-
-685910
-
-</td>
-
-<td style="text-align:right;">
-
-381507
-
-</td>
-
-<td style="text-align:right;">
-
-468869
-
-</td>
-
-<td style="text-align:right;">
-
-371230
-
-</td>
-
-<td style="text-align:right;">
-
-467420
-
-</td>
-
-<td style="text-align:right;">
-
-382928
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-4
-
-</td>
-
-<td style="text-align:right;">
-
-260617
-
-</td>
-
-<td style="text-align:right;">
-
-409450
-
-</td>
-
-<td style="text-align:right;">
-
-319568
-
-</td>
-
-<td style="text-align:right;">
-
-434460
-
-</td>
-
-<td style="text-align:right;">
-
-340291
-
-</td>
-
-<td style="text-align:right;">
-
-154049
-
-</td>
-
-<td style="text-align:right;">
-
-1440
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-5
-
-</td>
-
-<td style="text-align:right;">
-
-138421
-
-</td>
-
-<td style="text-align:right;">
-
-389080
-
-</td>
-
-<td style="text-align:right;">
-
-367824
-
-</td>
-
-<td style="text-align:right;">
-
-445366
-
-</td>
-
-<td style="text-align:right;">
-
-549658
-
-</td>
-
-<td style="text-align:right;">
-
-620860
-
-</td>
-
-<td style="text-align:right;">
-
-1440
-
-</td>
-
-</tr>
-
-</tbody>
-
-</table>
 
 ``` r
  activity %>% 
@@ -936,12 +287,13 @@ Saturday
   - The accelerometer acticity counts for all five weeks increase on
     Wednesday compared to Tuesday. and they all are numerically similar
     between Tuesday and Thursay. The activity counts on Saturday drop to
-    the same value in week 4 and week 5.
+    the same value (1440) in week 4 and week 5.
 
 <!-- end list -->
 
 ``` r
 activity %>% 
+  mutate(hour = minute %/% 60) %>% 
   group_by(hour, day) %>% 
   summarize(mean_hour_activity = mean(minute_activity)) %>% 
   ggplot(aes(x = hour, y = mean_hour_activity,
